JS v1.1 Spacing Fix

--- a/styles/globe.css
+++ b/styles/globe.css
@@ -1,10 +1,13 @@
+main{
+    padding-left: 60px;
+}
+
 .search-container {
     background-color: var(--background-dark);
     border-radius: 16px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     width: 40%;
     padding: 12px 18px;
-    margin-bottom: 16px;
 }
   
 .search-form {
@@ -58,8 +61,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 32px;
     padding: 24px;
+    padding-right: 0;
     flex-wrap: nowrap;
     width: 100%;
 }
@@ -171,6 +174,10 @@
 @media screen and (max-width: 600px) {
     html, body {
         overflow: scroll;
+    }
+
+    main{
+        padding: 0px;
     }
 
     .globe-container {
